{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 28,
  "lineage": "9ac72bb8-cff0-9a52-c97a-26e1200a9a6d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-allow-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-10-17T05:02:07.234-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sangtengkorak-terraform/global/firewalls/fw-allow-icmp",
            "log_config": [],
            "name": "fw-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/sangtengkorak-terraform/global/networks/custom-vpc-tf",
            "priority": 555,
            "project": "sangtengkorak-terraform",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sangtengkorak-terraform/global/firewalls/fw-allow-icmp",
            "source_ranges": [
              "180.244.167.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.custom-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-block-cp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2022-10-17T05:06:18.496-07:00",
            "deny": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sangtengkorak-terraform/global/firewalls/fw-block-icmp",
            "log_config": [],
            "name": "fw-block-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/sangtengkorak-terraform/global/networks/custom-vpc-tf",
            "priority": 444,
            "project": "sangtengkorak-terraform",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sangtengkorak-terraform/global/firewalls/fw-block-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.custom-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "auto-vpc-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/sangtengkorak-terraform/global/networks/auto-vpc-tf",
            "mtu": 0,
            "name": "auto-vpc-tf",
            "project": "sangtengkorak-terraform",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sangtengkorak-terraform/global/networks/auto-vpc-tf"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "custom-vpc-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/sangtengkorak-terraform/global/networks/custom-vpc-tf",
            "mtu": 0,
            "name": "custom-vpc-tf",
            "project": "sangtengkorak-terraform",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sangtengkorak-terraform/global/networks/custom-vpc-tf"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "sub-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-10-17T04:50:14.622-07:00",
            "gateway_address": "10.1.2.1",
            "id": "projects/sangtengkorak-terraform/regions/asia-southeast1/subnetworks/sub-sg",
            "ip_cidr_range": "10.1.2.0/24",
            "name": "sub-sg",
            "network": "https://www.googleapis.com/compute/v1/projects/sangtengkorak-terraform/global/networks/custom-vpc-tf",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sangtengkorak-terraform",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sangtengkorak-terraform/regions/asia-southeast1/subnetworks/sub-sg",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.custom-vpc-tf"
          ]
        }
      ]
    }
  ]
}